--- a/index.html
+++ b/index.html
@@ -39,7 +39,16 @@
     
     <canvas id="print-layout"></canvas>
 
-    <div id="debugConsole" style="white-space: pre-wrap; background: #f4f4f4; padding: 10px; margin-top: 10px; font-family: monospace;"></div>
+    <div id="debugConsole" style="
+        white-space: pre-wrap; 
+        background: #f4f4f4; 
+        padding: 10px; 
+        margin-top: 10px; 
+        font-family: monospace; 
+        height: 200px; 
+        overflow-y: auto; /* Enable scrolling */
+        border: 1px solid #ccc;">
+    </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
